nav-hamburger overlapped clicked resolved issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4239,12 +4239,12 @@ main .default-content-wrapper ul {
   border-bottom-right-radius: 0.25rem;
 }
 
-.\!border-0 {
-  border-width: 0px !important;
-}
-
 .border {
   border-width: 1px;
+}
+
+.border-0 {
+  border-width: 0px;
 }
 
 .border-2 {
@@ -4336,10 +4336,6 @@ main .default-content-wrapper ul {
 .border-b-gray-200 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.\!bg-transparent {
-  background-color: transparent !important;
 }
 
 .bg-black {
@@ -4843,10 +4839,6 @@ main .default-content-wrapper ul {
   line-height: 1rem;
 }
 
-.\!font-medium {
-  font-weight: 500 !important;
-}
-
 .\!font-normal {
   font-weight: 200 !important;
 }
@@ -4937,11 +4929,6 @@ main .default-content-wrapper ul {
 
 .tracking-wider {
   letter-spacing: 0.05em;
-}
-
-.\!text-black {
-  --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
 }
 
 .\!text-danahergray-900 {
@@ -5132,14 +5119,14 @@ main .default-content-wrapper ul {
   outline-style: solid;
 }
 
-.\!ring-0 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+.ring-0 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.\!ring-offset-0 {
-  --tw-ring-offset-width: 0px !important;
+.ring-offset-0 {
+  --tw-ring-offset-width: 0px;
 }
 
 .blur {
